# chess_board

./: chess_board.ipynb  pyproject.toml
.ipynb_checkpoints/: README-checkpoint.md  chess_board-checkpoint.ipynb
